<resources>

    <!-- Global -->
    <string name="app_name">StockAlyser</string>

    <!-- Titel -->
    <string name="title_stock">Stock</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_watchlist">Watchlist</string>

    <!-- Preference -->
    <string name="user_header">User</string>
    <string name="vis_header">Visualization</string>
    <string name="view_header">Display</string>
    <string name="apikey_title">Your API Key</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Menu -->
    <string name="menu_settings">Settings</string>

    <!-- TabLayout -->
    <string name="tab_today">TODAY</string>
    <string name="tab_week">WEEK</string>
    <string name="tab_month">MONTH</string>
    <string name="tab_year">YEAR</string>
    <string name="tab_max">MAX</string>

    <string name="menu_search">Search</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="empty_str">------</string>
    <string name="empty_value">--.--</string>
    <string name="str_currency">$</string>
    <string name="str_percent">%</string>
    <string name="stock_data">Data</string>
    <string name="stock_name">Name</string>
    <string name="stock_exchange">Exchange</string>
    <string name="stock_currency">Currency</string>
    <string name="stock_add_date">Add date</string>
    <string name="stock_insert">Insert</string>
    <string name="stock_key_indicator">Key Indicator</string>
    <string name="stock_open">Open</string>
    <string name="stock_close">Close</string>
    <string name="stock_volumen">Volumen</string>
    <string name="stock_average_volume">Average volume</string>
    <string name="stock_previous_close">Previous close</string>
    <string name="stock_change">Change</string>
    <string name="stock_percent_change">Percent change</string>
    <string name="stock_52_week">52-Week</string>
    <string name="stock_low">Low</string>
    <string name="stock_high">High</string>
    <string name="stock_low_change">Low change</string>
    <string name="stock_high_change">High change</string>
    <string name="stock_low_change_percent">Low change percent</string>
    <string name="stock_high_change_percent">High change percent</string>
    <string name="more">More</string>
    <string name="home_data">Values</string>
    <string name="homeavg">Average</string>
    <string name="homemin">Min</string>
    <string name="homemax">Max</string>
    <string name="homegradiant">Gradient</string>
    <string name="infotxt">- Information provided without warranty -</string>

    <!-- New -->


</resources>