<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/user_header">

        <EditTextPreference
            app:defaultValue="2d9d8679a270405da1f46095b5b1ae27"
            app:key="apikey"
            app:title="@string/apikey_title"
            app:useSimpleSummaryProvider="true" />



    </PreferenceCategory>

    <PreferenceCategory app:title="Trendgraphen">

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/trend_entries"
            app:entryValues="@array/trend_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/view_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
</PreferenceScreen>