<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wasge.stockalyser.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.wasge.stockalyser.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_watchlist"
        android:name="com.wasge.stockalyser.ui.watchlist.WatchlistFragment"
        android:label="@string/title_watchlist"
        tools:layout="@layout/fragment_watchlist" />

    <fragment
        android:id="@+id/navigation_stock"
        android:name="com.wasge.stockalyser.ui.StockFragment"
        android:label="@string/title_stock"
        tools:layout="@layout/fragment_stock" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.wasge.stockalyser.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_stock" />

</navigation>