<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:fragment="@string/menu_settings">

    <PreferenceCategory
        app:title="@string/user_header">

        <EditTextPreference
            app:defaultValue="2d9d8679a270405da1f46095b5b1ae27"
            app:key="apikey"
            app:title="@string/apikey_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Trend graph">

        <ListPreference
            app:defaultValue="none"
            app:entries="@array/trend_entries"
            app:entryValues="@array/trend_values"
            app:key="trend"
            app:title="Choose one trend graph"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <!-- We have tried to set a darkmode but with setTheme(R.style.DarkTheme) it didn't worked.

    <PreferenceCategory app:title="@string/view_header">

        <SwitchPreferenceCompat
            app:defaultValue=""
            app:key="darktheme"
            app:title="Darkmode (experimentel)" />

    </PreferenceCategory> -->
</PreferenceScreen>